--- a/BusinessObjects/Resources/Resource.es-DO.resx
+++ b/BusinessObjects/Resources/Resource.es-DO.resx
@@ -124,9 +124,7 @@
     <value>Eliminar</value>
   </data>
   <data name="buttonNew" xml:space="preserve">
-    <value>Nuevo
-Salvar
-New</value>
+    <value>Nuevo</value>
   </data>
   <data name="buttonSave" xml:space="preserve">
     <value>Salvar</value>
@@ -160,6 +158,9 @@ New</value>
   </data>
   <data name="labelName" xml:space="preserve">
     <value>Nombre</value>
+  </data>
+  <data name="labelSearch" xml:space="preserve">
+    <value>Buscar</value>
   </data>
   <data name="labelVendorTypeId" xml:space="preserve">
     <value>Tipo Suplidor</value>
