--- a/BusinessObjects/Resources/Resource.resx
+++ b/BusinessObjects/Resources/Resource.resx
@@ -159,6 +159,9 @@
   <data name="labelName" xml:space="preserve">
     <value>Nombre</value>
   </data>
+  <data name="labelSearch" xml:space="preserve">
+    <value>Buscar</value>
+  </data>
   <data name="labelVendorTypeId" xml:space="preserve">
     <value>Tipo Suplidor</value>
   </data>
