--- a/BusinessObjects/Resources/Resource.en-US.resx
+++ b/BusinessObjects/Resources/Resource.en-US.resx
@@ -144,6 +144,9 @@
   <data name="FormCustomer" xml:space="preserve">
     <value>Customer</value>
   </data>
+  <data name="FormMain" xml:space="preserve">
+    <value>Billing System</value>
+  </data>
   <data name="FormVendor" xml:space="preserve">
     <value>Vendor</value>
   </data>
@@ -162,6 +165,9 @@
   <data name="labelId" xml:space="preserve">
     <value>Id</value>
   </data>
+  <data name="labelLanguaje" xml:space="preserve">
+    <value>Choose Languaje</value>
+  </data>
   <data name="labelName" xml:space="preserve">
     <value>Name</value>
   </data>
@@ -174,11 +180,20 @@
   <data name="MaxLengthErrorMessage" xml:space="preserve">
     <value>You have exceeded the maximum length of the field</value>
   </data>
+  <data name="MenuItem" xml:space="preserve">
+    <value>Files</value>
+  </data>
   <data name="Name" xml:space="preserve">
     <value>Name</value>
   </data>
   <data name="RequiredErrorMessage" xml:space="preserve">
     <value>The field is required</value>
+  </data>
+  <data name="toolStripMenuItemCustomer" xml:space="preserve">
+    <value>Customer</value>
+  </data>
+  <data name="toolStripMenuItemVendor" xml:space="preserve">
+    <value>Vendors</value>
   </data>
   <data name="VendName" xml:space="preserve">
     <value>Name</value>
