--- a/WisejWebPageApplication1/MainPage.resx
+++ b/WisejWebPageApplication1/MainPage.resx
@@ -117,118 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Adress" xml:space="preserve">
-    <value>Direccion</value>
-  </data>
-  <data name="buttonDelete" xml:space="preserve">
-    <value>Eliminar</value>
-  </data>
-  <data name="buttonNew" xml:space="preserve">
-    <value>Nuevo</value>
-  </data>
-  <data name="buttonSave" xml:space="preserve">
-    <value>Salvar</value>
-  </data>
-  <data name="buttonSearch" xml:space="preserve">
-    <value>Buscar</value>
-  </data>
-  <data name="checkBoxStatus" xml:space="preserve">
-    <value>Estatus</value>
-  </data>
-  <data name="comboBoxCustomerType" xml:space="preserve">
-    <value>Tipo  de Cliente</value>
-  </data>
-  <data name="comboBoxVendorType" xml:space="preserve">
-    <value>Tipo Suplidor</value>
-  </data>
-  <data name="CustName" xml:space="preserve">
-    <value>Nombre</value>
-  </data>
-  <data name="CustomerTypeId" xml:space="preserve">
-    <value>Tipo Cliente</value>
-  </data>
-  <data name="Description" xml:space="preserve">
-    <value>Descripcion</value>
-  </data>
-  <data name="FormCustomer" xml:space="preserve">
-    <value>Clientes</value>
-  </data>
-  <data name="FormMain" xml:space="preserve">
-    <value>Sistema de Facturacion</value>
-  </data>
-  <data name="FormVendor" xml:space="preserve">
-    <value>Suplidores</value>
-  </data>
-  <data name="Id" xml:space="preserve">
-    <value>Id</value>
-  </data>
-  <data name="labelAdress" xml:space="preserve">
-    <value>Direccion</value>
-  </data>
-  <data name="labelCustomerTypeId" xml:space="preserve">
-    <value>Tipo Cliente</value>
-  </data>
-  <data name="labelDescription" xml:space="preserve">
-    <value>Descripcion</value>
-  </data>
-  <data name="labelId" xml:space="preserve">
-    <value>Codigo</value>
-  </data>
-  <data name="labelLanguaje" xml:space="preserve">
-    <value>Seleccione Idioma</value>
-  </data>
-  <data name="labelName" xml:space="preserve">
-    <value>Nombre</value>
-  </data>
-  <data name="labelSearch" xml:space="preserve">
-    <value>Buscar</value>
-  </data>
-  <data name="labelVendorTypeId" xml:space="preserve">
-    <value>Tipo Suplidor</value>
-  </data>
-  <data name="MaxLengthErrorMessage" xml:space="preserve">
-    <value>Ha excedido la longitud maxima del campo</value>
-  </data>
-  <data name="MenuItem" xml:space="preserve">
-    <value>Ficheros</value>
-  </data>
-  <data name="menuItemCustomer" xml:space="preserve">
-    <value>Clientes</value>
-  </data>
-  <data name="menuItemFile" xml:space="preserve">
-    <value>Ficheros</value>
-  </data>
-  <data name="menuItemVendor" xml:space="preserve">
-    <value>Suplidores</value>
-  </data>
-  <data name="RequiredErrorMessage" xml:space="preserve">
-    <value>El campo es requerido</value>
-  </data>
-  <data name="textBoxAdress" xml:space="preserve">
-    <value>Direccion</value>
-  </data>
-  <data name="TextBoxCustName" xml:space="preserve">
-    <value>Cliente</value>
-  </data>
-  <data name="textBoxId" xml:space="preserve">
-    <value>Codigo</value>
-  </data>
-  <data name="textBoxSearch" xml:space="preserve">
-    <value>Buscar</value>
-  </data>
-  <data name="TextBoxVendName" xml:space="preserve">
-    <value>Suplidor</value>
-  </data>
-  <data name="toolStripMenuItemCustomer" xml:space="preserve">
-    <value>Clientes</value>
-  </data>
-  <data name="toolStripMenuItemVendor" xml:space="preserve">
-    <value>Suplidores</value>
-  </data>
-  <data name="VendName" xml:space="preserve">
-    <value>Nombre</value>
-  </data>
-  <data name="VendorTypeId" xml:space="preserve">
-    <value>Tipo Suplidor</value>
-  </data>
+  <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
+        dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWIwM2Y1ZjdmMTFkNTBhM2EHAQAAAAABAAAAAAAAAAQU
+        U3lzdGVtLkRyYXdpbmcuUG9pbnQCAAAACw==
+</value>
+  </metadata>
 </root>
